--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ position: relative;
         </center>
         &nbsp;<br/>
 
-        <h2>Developers</h2>
+        <h2>Developers 123</h2>
         <ul>
             <li>KDX includes a miniature 'build toolchain' that allows
             you to re-build Kaspa software stack directly from GitHub sources.</li>
