--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ position: relative;
         <h2>KDX</h2>
         <p>KDX process manager provides zero-effort installation and configuration of the Kaspa 
         software stack when running in a desktop operating system environment.  KDX allows you to run Kaspa 
-        full node software as well as it's Kasparov components that provide Kaspa BlockDAG API services.</p>
+        full node software as well as Kasparov components that provide Kaspa BlockDAG API services.</p>
 
         <p>KDX is not a wallet (although it does include Kaspa's functional command-line wallet demo).</p>
         <p>
@@ -134,9 +134,9 @@ position: relative;
 
         <h2>Developers</h2>
         <ul>
-            <li>KDX includes a miniature 'build toolchain' that allows
-            you to re-build Kaspa software stack directly from GitHub sources.</li>
-            <li>KDX includes and instance of KExplorer (Kaspa DAGchain explorer) project configured against local instance of Kasparov API server.</li>
+            <li>KDX includes a miniature build toolchain that allows
+            you to rebuild Kaspa software stack directly from GitHub sources.</li>
+            <li>KDX includes and instance of KExplorer (Kaspa BlockDAG explorer) project configured against local instance of Kasparov API server.</li>
         </ul>
 
         <p>
