+osx v1 (dagviz still broken)

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ position: relative;
     Object.entries({
         'windows-x64.exe' : 'installer',
         'windows-x64.zip' : 'portable',
-        '-darwin-x64.dmg' : 'DMG image',
+        'darwin-x64.dmg' : 'DMG image',
         '-darwin-x64.zip' : 'portable',
         '-linux-x64.zip' : 'portable',
     }).forEach(([build,descr]) => {
