--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ position: relative;
             <li>KDX includes and instance of KExplorer (Kaspa BlockDAG explorer) project configured against local instance of Kasparov API server.</li>
         </ul>
 
-        <h2 red><i class="fa fa-exclamation-triangle fa-lg"></i> Note to Windows Users</h2>
+        <h2 red><i class="fal fa-exclamation-triangle fa-lg"></i> Note to Windows Users</h2>
         <p>
             We have recently discovered a compatibility issue between PostgreSQL database module
             and certain types of <u>international (non-US) Windows 10 installations</u>.  This problem especially
@@ -242,7 +242,7 @@ position: relative;
     <div class='separator'></div>
     <div>
         <div><h2>Download KDX</h2></div>
-        <div red notice>Windows Users - Please read the note below!</div>
+        <div red notice><i class="fal fa-exclamation-triangle fa-lg"></i> Windows Users - Please read the note below!</div>
         <div id="file-list"></div>
 
         <div style="text-align: left;">
@@ -259,7 +259,7 @@ position: relative;
         
         <div><h2>Sources</h2></div>
         <div>
-            <a class="file-link" href=""><div class="icon icon-github"></div><div>http://github.com/aspectron/kdx</div></a>
+            <a class="file-link" href=""><div class="icon icon-github"></div><div>http://github.com/kaspanet/kdx</div></a>
         </div>
 
         <div><h2>KDX Components</h2></div>
