--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@ position: relative;
     .screen-shot {
         width: 580px;
         height: auto;
-    }
+        border: 2px solid #eee;
+       }
 
     .descr {
         min-width: 100px;
