--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@ position: relative;
             this option is turned on by default, which it should not be.
         </p>
         <p>
-            We are working on addressing this issue and can also integrate a solution in the KDX installer,
+            We can integrate a script to address this in the KDX installer,
             however, it really should be fixed in PostgreSQL itself. <span bold red>While we work on addressing this, you need to
             apply the following workaround:</span>
         </p>
