--- a/index.html
+++ b/index.html
@@ -366,9 +366,9 @@ position: relative;
 //    const KDX_VERSION = "1.0.0";
     let fileList = document.getElementById('file-list');
     Object.entries({
-        'kdx-1.0.0-windows-x64.exe' : 'installer',
-        'kdx-1.0.0-windows-x64.zip' : 'portable',
-        'kdx-1.0.3-darwin-x64.dmg' : 'DMG image',
+        'kdx-v1.0.0-windows-x64.exe' : 'installer',
+        'kdx-v1.0.0-windows-x64.zip' : 'portable',
+        'kdx-v1.0.3-darwin-x64.dmg' : 'DMG image',
         '-kdx-1.0.3-darwin-x64.zip' : 'portable',
         '-kdx-1.0.0-linux-x64.zip' : 'portable',
     }).forEach(([file,descr]) => {
