flow-download-badge

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link href="https://fonts.googleapis.com/css?family=Exo+2&display=swap" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="resources/fonts/fontawesome/css/all.min.css" />
 
-    <!-- <link rel="stylesheet" type="text/css" href="node_modules/@aspectron/flow-ux/dist/flow-ux-static/flow-ux/flow-ux.css" />
-    <script type="module" src="node_modules/@aspectron/flow-ux/dist/flow-ux-static/flow-ux/flow-ux.js"></script> -->
+    <link rel="stylesheet" type="text/css" href="node_modules/@aspectron/flow-ux/dist/latest/flow-ux-static/flow-ux/flow-ux.css" />
+    <script type="module" src="node_modules/@aspectron/flow-ux/dist/latest/flow-ux-static/flow-ux/flow-ux.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="https://cdn.aspectron.com/latest/flow-ux-static/flow-ux/flow-ux.css" />
-    <script type="module" src="https://cdn.aspectron.com/latest/flow-ux-static/flow-ux/flow-ux.js"></script>
+    <!-- <link rel="stylesheet" type="text/css" href="https://cdn.aspectron.com/latest/flow-ux-static/flow-ux/flow-ux.css" />
+    <script type="module" src="https://cdn.aspectron.com/latest/flow-ux-static/flow-ux/flow-ux.js"></script>-->
 
     <link rel="stylesheet" href="resources/styles/kdx-portal.css">
     <link rel="stylesheet" href="resources/styles/theme-1.css">
