--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ export class HomePage extends BaseElement{
     }
 
     render(){
+        let files = this.renderFiles();
         return html`
         <flow-app floating-drawer>
         <img slot="header" class="logo" src="resources/images/kdx.svg" />
@@ -66,7 +67,10 @@ export class HomePage extends BaseElement{
             <div>
                 <div><h2>Download KDX</h2></div>
                 <!-- div red notice><i xclass="fal fa-exclamation-triangle fa-lg"></i>Please read Known Problems</div -->
-                <div id="file-list">${this.renderFiles()}</div>
+                <flow-selector id="file-list" label="Select file" selected="${files.selected}"
+                    class="file-list">${files.contents}</flow-selector>
+                <flow-btn @click="${this.onDownloadClick}">Download</flow-btn> 
+                <a class="download-sha1-link" @click="${this.onSha1DownloadClick}">SHA1</a>
 
                 <div style="text-align: left;">
                     <hr style="width: 30%; margin:24px 0px 14px 4px;"/>
@@ -103,7 +107,6 @@ export class HomePage extends BaseElement{
                         installed on your computer.
                     </div>
                 </div>
-
             </div>
         </section>
         <section column>
@@ -190,10 +193,12 @@ export class HomePage extends BaseElement{
     }
 
     renderFiles(){
-        return Object.entries({
+        let userOS = this.getOS();
+        let selected = '';
+        let contents = Object.entries({
             'kdx-v1.0.0-windows-x64.exe' : 'installer',
             'kdx-v1.0.0-windows-x64.zip' : 'portable',
-            'kdx-v1.0.3-darwin-x64.dmg' : 'DMG image',
+            'kdx-v1.0.3-darwin-x64.dmg' : 'DMG',
             '-kdx-1.0.3-darwin-x64.zip' : 'portable',
             '-kdx-1.0.0-linux-x64.zip' : 'portable'
         }).map(([file, descr]) => {
@@ -204,17 +209,68 @@ export class HomePage extends BaseElement{
             }
 
             let [app,version,os,platform] = file.split('-');
+            if(!selected && os == userOS)
+                selected = file;
             return html`
-            <flow-download-badge class="dl-wrapper ${disable}"
+            <flow-download-badge class="dl-wrapper ${disable} menu-item"
                 file="downloads/${file}"
                 icon="resources/images/${os}.svg"
                 title="${file}"
                 descr="${descr}"
-                sha1="downloads/${file}.sha1sum"
+                value="${file}"
+                data-text="${file} ${descr}"
                 ></flow-download-badge>
             `;
         });
+        return {contents, selected}
     }
+    getOS(){
+        let userAgent = window.navigator.userAgent,
+          platform = window.navigator.platform,
+          macosPlatforms = ['Macintosh', 'MacIntel', 'MacPPC', 'Mac68K'],
+          windowsPlatforms = ['Win32', 'Win64', 'Windows', 'WinCE'],
+          iosPlatforms = ['iPhone', 'iPad', 'iPod'],
+          os = null;
+
+        if (macosPlatforms.indexOf(platform) !== -1) {
+            os = 'darwin';
+        } else if (iosPlatforms.indexOf(platform) !== -1) {
+            os = 'ios';
+        } else if (windowsPlatforms.indexOf(platform) !== -1) {
+            os = 'windows';
+        } else if (/Android/.test(userAgent)) {
+            os = 'android';
+        } else if (!os && /Linux/.test(platform)) {
+            os = 'linux';
+        }
+
+        return os;
+    }
+
+    onDownloadClick(){
+        let file = this.renderRoot.querySelector("#file-list").selected;
+        if(!file)
+            return
+        this.download(file, 'downloads/'+file);
+    }
+    onSha1DownloadClick(){
+        let file = this.renderRoot.querySelector("#file-list").selected;
+        if(!file)
+            return
+        this.download(file+" SHA1", 'downloads/'+file+'.sha1sum');
+    }
+
+    download(name, href){
+        let a = document.createElement('a');
+        a.href = href;
+        a.setAttribute("download", name);
+        this.appendChild(a);
+        a.click();
+        setTimeout(()=>{
+            this.removeChild(a);
+        }, 1000)
+    }
+
 }
 
 HomePage.define("home-page");
