http://github.com/kaspanet/kdx link issue

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ export class HomePage extends BaseElement{
                 
                 <div><h2>Sources</h2></div>
                 <div>
-                    <a class="file-link" href=""><div class="icon icon-github"></div><div>http://github.com/kaspanet/kdx</div></a>
+                    <a class="file-link" href="http://github.com/kaspanet/kdx"><div class="icon icon-github"></div><div>http://github.com/kaspanet/kdx</div></a>
                 </div>
 
                 <div><h2>KDX Components</h2></div>
