--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link href="https://fonts.googleapis.com/css?family=Exo+2&display=swap" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="resources/fonts/fontawesome/css/all.min.css" />
 
+    <script type="text/javascript">
+        var flowConfig = {
+            theme:{
+                iconPath:"resources/fonts/fontawesome/sprites/",
+                iconFile:"light"
+            }
+        }
+    </script>     
+
     <!--<link rel="stylesheet" type="text/css" href="node_modules/@aspectron/flow-ux/dist/latest/flow-ux-static/flow-ux/flow-ux.css" />
     <script type="module" src="node_modules/@aspectron/flow-ux/dist/latest/flow-ux-static/flow-ux/flow-ux.js"></script> -->
 
