--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>KDX Portal</title>
+    <title>KDX</title>
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono&display=swap" rel="stylesheet" />
@@ -17,11 +17,12 @@
         }
     </script>     
 
-    <!--<link rel="stylesheet" type="text/css" href="node_modules/@aspectron/flow-ux/dist/latest/flow-ux-static/flow-ux/flow-ux.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="node_modules/@aspectron/flow-ux/dist/latest/flow-ux-static/flow-ux/flow-ux.css" />
     <script type="module" src="node_modules/@aspectron/flow-ux/dist/latest/flow-ux-static/flow-ux/flow-ux.js"></script> -->
 
     <link rel="stylesheet" type="text/css" href="https://cdn.aspectron.com/latest/flow-ux-static/flow-ux/flow-ux.css" />
     <script type="module" src="https://cdn.aspectron.com/latest/flow-ux-static/flow-ux/flow-ux.js"></script>
+
     <script type="module" src="index.js"></script>
 
     <link rel="stylesheet" href="resources/styles/kdx-portal.css">
