--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Exo+2&display=swap" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="resources/fonts/fontawesome/css/all.min.css" />
-
+    <script src="/resources/extern/d3/d3.js"></script>
     <script type="text/javascript">
         var flowConfig = {
             theme:{
