update for flow-app refactoring

--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
     <link rel="stylesheet" href="resources/styles/style.css">
 </head>
 <body class="loading">
-<home-page></home-page>
+<kdx-portal></kdx-portal>
 </body>
 </html>
